<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BetaPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_newevent">New Event</string>
    <string name="title_noteedit">Note Editor</string>
    <string name="note_edit">Note Edit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="texttitle_notebody">Body</string>
    <string name="btn_save">Save</string>
    <string name="texttitle_notetitle">Title</string>
    <string name="no_notes">No Notes</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_fragment1">Calendar</string>
    <string name="title_activity_fragment2">Note</string>
    <string name="menu_insert">Add</string>
    <string name="title_activity_t_editor">T_editor</string>
    <string name="task_title_hint_et">What\'s your task?</string>
    <string name="task_comment_hint_et">Comments here</string>
    <string name="task_time_alert_tv">Remind me on a day:</string>
    <string name="task_location_alert_tv">Remind me at a place:</string>
    <string name="task_priority_tv">Priority:</string>
    <string name="title_activity_cal">Cal</string>
    <string name="task_delete">Delete</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="time_alert">Alert on a day: </string>
    <string name="title_activity_task_edit">TaskEdit</string>
    <string name="loc_alert">Alert at a location:</string>
    <string name="priority">Priority</string>
    <string name="low_priority">Low</string>
    <string name="med_priority">Medium</string>
    <string name="high_priority">High</string>
    <string name="none">None</string>
    <string name="title_taskedit">Edit task</string>
    <string name="test">TEXT TESTING</string>
    <string name="subtask">Subtask:</string>
    <string name="new_subtask">New Subtask</string>
    <string name="title_activity_event_editor">EventEditor</string>

</resources>